--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=u570827952_bagus
 DB_USERNAME=u570827952_bagus
-DB_PASSWORD=@Bagus123
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
